--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,42 @@
 # Git files
 .git
 .gitignore
+.gitattributes
+.github/
+
 
 # Local config files
 .editorconfig
 
-#build files
+# build files
 build.sh
 buildCache.sh
+.build/
 
 # Information files
 LICENSE
 README.md
+
+# other
+.dockerignore
+[Dd]ata/
+[Ll]ogs/
+**/__pycache__
+**/.gitignore
+**/*.db
+**/*.db.*
+**/*.log
+**/*.py[cod]
+**/node_modules/
+cache/
+Dockerfile
+dredd/
+hooks/
+runscripts/
+tests/
+themes-default/
+venv/
+
+# Ignore Windows and MacOS specific files
+lib/native/**/*.dll
+lib/native/**/*.dylib
